--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ include:
   - PULL_REQUEST_TEMPLATE.md
 
 theme: jekyll-theme-midnight
+
+title: [LoolzRules's website]
+description: [Welcome to my website]
