Oh boy, does it work

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,10 @@ title: [LoolzRules's website]
 description: [Welcome to my website]
 
 permalink: /:categories/:year/:month/:day/:title/
+
+defaults:
+  -
+    scope:
+      path: ""
+    values:
+      layout: "post"
