--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,32 @@
+theme: jekyll-theme-midnight
+
 plugins:
   - jekyll-relative-links
   - jekyll-sitemap
+
 relative_links:
   enabled: true
   collections: true
+
 include:
   - CONTRIBUTING.md
   - README.md
   - LICENSE.md
   - COPYING.md
   - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
   - ISSUE_TEMPLATE.md
   - PULL_REQUEST_TEMPLATE.md
 
-theme: jekyll-theme-midnight
+exclude:
+  - .idea
+  - .gitignore
 
 title: [LoolzRules's website]
 description: [Welcome to my website]
 
-permalink: /:categories/:year/:month/:day/:title/
+collections:
+  channel:
+    output: true
 
 defaults:
   -
@@ -29,8 +36,9 @@ defaults:
       sitemap: false
   -
     scope:
-      path: "_posts/*"
+      path: "_channel/*.md"
     values:
+      permalink: /channel/:year/:month/:day/:title/
       layout: post
 
 loolzrules:
